# feather

./: .gitmodules  :w  CMakeLists.txt
.cache/clangd/index/: ArgsParser.hpp.34F1077C988F4921.idx  Crypto.hpp.F97A60AA2DDBA592.idx  Files.hpp.8A151A5817EC80FA.idx  HelloWorld.hpp.C29E12B2318B1496.idx  Limits.hpp.BA6AAEF2068E0F3B.idx  Math.hpp.87CDF593F4FB621F.idx  Statistics.hpp.A7E4972713B05453.idx  String.hpp.68B365DE0B42A509.idx  Strings.hpp.05A30F1AEAA7C06F.idx  argsparser.cpp.C456B3B62757809D.idx  average.cpp.AA7F24DC975EC9AE.idx  char_case.cpp.6E1092AFF07F24FF.idx  clean_decimals.cpp.508A5DE0F67D8EDA.idx  doctest.h.07B5984C2822F79F.idx  doctest.h.8A012313E93D9484.idx  fileio.cpp.5217166A2CE38AF8.idx  filepaths.cpp.93E49F393196C37C.idx  helloworld.cpp.DC770732E0FDD1ED.idx  limits.cpp.26F5E9BF4F1C21D0.idx  main.cpp.3CB475D33B05AE8C.idx  main.cpp.CEB5727D7B488C43.idx  md5sum.cpp.D17E6C1F0D876CDD.idx  normalize.cpp.DF6AEF74BEE17E42.idx  parser.cpp.20401F01E57F767E.idx  round.cpp.FA964CBEA4DD9E4B.idx  seed.hpp.1D2484CB89D21334.idx  std.hpp.5B0A29066B4D0B0D.idx  string.cpp.96E776A2A8AC28E9.idx  trim_char.cpp.05DCFE3A46E05984.idx
include/: Parser.hpp
src/: main.cpp  parser.cpp
